# ChatOdego

./: README.md  odego_colab_server_based_GPT.ipynb
client/: App.js  package-lock.json  package.json
client/src/: ChatScreen.js  MainScreen.js
server/: .gitignore  README.md  main.py  pyproject.toml
server/routes/: chatbot_router.py
server/schema/: chatbot_schema.py
server/src/chatodego_v1/: main.py
server/src/chatodego_v1/faiss-odego-openai/: index.pkl
server/src/chatodego_v1/routes/: chatbot_router.py
server/src/chatodego_v1/schema/: chatbot_schema.py
