[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["or-m-or <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = "0.103.2"
uvicorn = "0.23.2"
pydantic-settings = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
